RESOLVED FIXED301474
Fix the internal watchOS build
https://bugs.webkit.org/show_bug.cgi?id=301474
Summary Fix the internal watchOS build
Abrar Rahman Protyasha
Reported 2025-10-25 17:42:13 PDT
On some SDKs, we start presenting this alert: ``` In file included from /Build/Release-watchsimulator/DerivedSources/WebKit/unified-sources/UnifiedSource57-nonARC.mm:3: /Source/WebKit/UIProcess/ios/WKTextInteractionWrapper.mm:98:10: error: private field 'm_reactivateSelection' is not used [-Werror,-Wunused-private-field] 98 | bool m_reactivateSelection { false }; 1 error generated. ```
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-25 17:42:19 PDT
Abrar Rahman Protyasha
Comment 2 2025-10-25 17:45:44 PDT
EWS
Comment 3 2025-10-26 01:33:14 PDT
Committed 302164@main (a449cd72e50a): <https://commits.webkit.org/302164@main> Reviewed commits have been landed. Closing PR #53002 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.