Fix the internal watchOS build https://bugs.webkit.org/show_bug.cgi?id=301474 rdar://163417901

Unreviewed build fix.

On some SDKs, we start presenting this error:

```
In file included from /Build/Release-watchsimulator/DerivedSources/WebKit/unified-sources/UnifiedSource57-nonARC.mm:3:
/Source/WebKit/UIProcess/ios/WKTextInteractionWrapper.mm:98:10: error: private field 'm_reactivateSelection' is not used [-Werror,-Wunused-private-field]
   98 |     bool m_reactivateSelection { false };
1 error generated.
```

We address this error by gating the declaration behind
HAVE_UI_TEXT_SELECTION_DISPLAY_INTERACTION, matching all cases where the
field is accessed.

* Source/WebKit/UIProcess/ios/WKTextInteractionWrapper.mm:

Canonical link: https://commits.webkit.org/302164@main